@@ -2,6 +2,7 @@
 	- Change the Cache from being periodically cleaned to being
 	  size-bounded.  (based on a patch from several years ago
 	  from Joseph Shraibman <jks@iname.com>).
+	- Remove the FindServer class.
 
 4/1/2005
 	- Use java.nio classes for sockets internally, which provide a
